# mcserve

./: Cargo.toml
cpp/: CMakeLists.txt  async.cpp  main.cpp
src/: main.rs  netdata.rs
